cleaning uout imperfections

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
             <div
                 class="flex flex-row gap-2 md:gap-6 lg:gap-8 justify-center my-2"
             >
-                <div class="px-4 py-2 -mx-2 text-gray-100 rounded bg-slate-500">
+                <div class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
                     Home
                 </div>
-                <div class="px-4 py-2 -mx-2 text-gray-100 rounded bg-slate-500">
+                <div class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
                     About
                 </div>
-                <div class="px-4 py-2 -mx-2 text-gray-100 rounded bg-slate-500">
+                <div class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
                     Timeline
                 </div>
-                <div class="px-4 py-2 -mx-2 text-gray-100 rounded bg-slate-500">
+                <div class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
                     Buidl Week
                 </div>
-                <div class="px-4 py-2 -mx-2 text-gray-100 rounded bg-slate-500">
+                <div class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
                     Hackathon
                 </div>
             </div>
@@ -86,7 +86,7 @@
                     class="px-4 py-6 text-gray-400 max-w-xs border-gray-500 border-l-2 border-t-0 md:border-l-0 md:border-t-2"
                 >
                     <span
-                        class="bg-gray-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[31px] "
+                        class="bg-green-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[31px] "
                         >Title</span
                     >
 
@@ -98,7 +98,7 @@
                     class="px-4 py-6 text-gray-400 max-w-xs border-gray-500 border-l-2 border-t-0 md:border-l-0 md:border-t-2"
                 >
                     <span
-                        class="bg-gray-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[31px]"
+                        class="bg-green-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[31px]"
                         >Title</span
                     >
                     <div class="h-2"></div>
@@ -109,7 +109,7 @@
                     class="px-4 py-6 text-gray-400 max-w-xs border-gray-500 border-l-2 border-t-0 md:border-l-0 md:border-t-2"
                 >
                     <span
-                        class="bg-gray-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[31px]"
+                        class="bg-green-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[31px]"
                         >Title</span
                     >
                     <div class="h-2"></div>
