--- a/index.html
+++ b/index.html
@@ -12,21 +12,18 @@
             <div
                 class="flex flex-row gap-2 md:gap-6 lg:gap-8 justify-center my-2"
             >
-                <div class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
-                    Home
-                </div>
-                <div class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
+                <a href="#about" class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
                     About
-                </div>
-                <div class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
+                </a>
+                <a href="#timeline" class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
                     Timeline
-                </div>
-                <div class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
+                </a>
+                <a href="#about" class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
                     Buidl Week
-                </div>
-                <div class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
+                </a>
+                <a href="#about" class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
                     Hackathon
-                </div>
+                </a>
             </div>
         </div>
 
@@ -61,6 +58,7 @@
 
         <!-- About us -->
         <div
+            id="about"
             class="h-screen w-full bg-neutral-900 grid place-items-center relative"
         >
             <div class="flex flex-col gap-4 text-center z-20">
@@ -79,14 +77,17 @@
         </div>
 
         <!-- Timeline -->
-        <div class="h-screen w-screen bg-neutral-900 grid place-items-center">
+        <div
+            id="timeline"
+            class="h-screen w-screen bg-neutral-900 grid place-items-center"
+        >
             <h2 class="text-gray-100 font-extrabold text-4xl">Timeline</h2>
             <div class="flex flex-col md:flex-row text-left justify-center">
                 <div
                     class="px-4 py-6 text-gray-400 max-w-xs border-gray-500 border-l-2 border-t-0 md:border-l-0 md:border-t-2"
                 >
                     <span
-                        class="bg-green-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[31px] "
+                        class="bg-green-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[31px]"
                         >Title</span
                     >
 
