--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <body class="text-manrope w-screen">
         <div class="h-max w-full absolute z-30">
             <div
-                class="flex flex-row gap-2 md:gap-6 lg:gap-8 justify-center my-2"
+                class="flex flex-row gap-2 md:gap-6 lg:gap-16 justify-center my-2"
             >
-                <a href="#about" class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
+                <a href="#about" class="px-4 py-2 -mx-2 rounded  text-neutral-50">
                     About
                 </a>
-                <a href="#timeline" class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
+                <a href="#timeline" class="px-4 py-2 -mx-2 rounded  text-neutral-50">
                     Timeline
                 </a>
-                <a href="#about" class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
+                <a href="#about" class="px-4 py-2 -mx-2 rounded  text-neutral-50">
                     Buidl Week
                 </a>
-                <a href="#about" class="px-4 py-2 -mx-2 rounded bg-green-400 text-black">
+                <a href="#about" class="px-4 py-2 -mx-2 rounded  text-neutral-50">
                     Hackathon
                 </a>
             </div>
