--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             id="app"
             class="h-screen w-full bg-neutral-900 grid place-items-center relative overflow-y-visible"
         >
-            <div class="flex flex-col gap-8 text-center">
+            <div class="flex flex-col gap-8 text-center z-20">
                 <h1 class="text-gray-100 font-extrabold text-4xl text-blanka">
                     BITS Blockchain
                 </h1>
