--- a/index.html
+++ b/index.html
@@ -5,14 +5,32 @@
         <link rel="icon" type="image/svg+xml" href="favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./style.css" />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/kursor/dist/kursor.css"
+        />
         <title>Vite App</title>
     </head>
-    <body class="text-manrope w-screen overflow-x-hidden bg-neutral-900">
+    <body
+        class="text-manrope w-screen overflow-x-hidden bg-neutral-900 -z-50 cursor-none flex flex-col selection:bg-green-500 selection:text-neutral-900"
+    >
+        <!-- <script src="https://unpkg.com/kursor@0.1.6/dist/kursor.js"></script> -->
         <div
             id="scroller"
-            class="h-1 top-0 sticky max-w-full z-50 bg-green-400"
+            class="h-1 top-0 sticky max-w-full z-30 bg-green-400"
         ></div>
-        <div class="h-max w-full absolute z-30">
+        <div
+            class="h-16 w-16 absolute top-0 left-0 bg-green-500 -translate-x-1/2 -translate-y-1/2 rotate-45 z-30"
+        ></div>
+        <div
+            id="cursorBox"
+            class="h-8 w-8 border-green-500 border-2 rounded-full -translate-x-1/2 -translate-y-1/2 sticky z-20"
+        ></div>
+        <div
+            id="cursor"
+            class="h-2 w-2 rounded bg-green-500 -translate-x-1/2 -translate-y-1/2 sticky z-20"
+        ></div>
+        <div class="h-max w-full absolute z-30 select-none">
             <div
                 class="flex flex-row gap-2 md:gap-6 lg:gap-16 justify-center my-2"
             >
@@ -46,7 +64,7 @@
         <!-- Landing section -->
         <div
             id="app"
-            class="h-screen w-full bg-neutral-900 grid place-items-center relative overflow-y-visible"
+            class="h-screen w-full bg-neutral-900 grid place-items-center relative overflow-visible"
         >
             <div class="flex flex-col gap-8 text-center z-20">
                 <h1 class="text-gray-100 font-extrabold text-4xl text-blanka">
@@ -97,13 +115,13 @@
             id="timeline"
             class="h-screen w-screen bg-neutral-900 grid place-items-center"
         >
-            <h2 class="text-gray-100 font-extrabold text-4xl">Timeline</h2>
+            <h2 class="text-gray-100 font-extrabold text-4xl z-20">Timeline</h2>
             <div class="flex flex-col md:flex-row text-left justify-center">
                 <div
-                    class="px-4 py-6 text-gray-400 max-w-xs border-gray-500 border-l-2 border-t-0 md:border-l-0 md:border-t-2"
+                    class="z-20 px-4 py-6 text-gray-400 max-w-xs border-gray-500 border-l-2 border-t-0 md:border-l-0 md:border-t-2"
                 >
                     <span
-                        class="bg-green-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[31px]"
+                        class="bg-green-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[29px]"
                         >Title</span
                     >
 
@@ -115,7 +133,7 @@
                     class="px-4 py-6 text-gray-400 max-w-xs border-gray-500 border-l-2 border-t-0 md:border-l-0 md:border-t-2"
                 >
                     <span
-                        class="bg-green-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[31px]"
+                        class="bg-green-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[29px]"
                         >Title</span
                     >
                     <div class="h-2"></div>
@@ -126,7 +144,7 @@
                     class="px-4 py-6 text-gray-400 max-w-xs border-gray-500 border-l-2 border-t-0 md:border-l-0 md:border-t-2"
                 >
                     <span
-                        class="bg-green-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[31px]"
+                        class="bg-green-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[29px]"
                         >Title</span
                     >
                     <div class="h-2"></div>
@@ -135,7 +153,6 @@
                 </div>
             </div>
         </div>
-        <script src="https://unpkg.com/kursor@0.1.6/dist/kursor.js"></script>
         <script src="./main.js" type="module"></script>
     </body>
 </html>
