--- a/index.html
+++ b/index.html
@@ -36,27 +36,43 @@
             >
                 <div
                     onclick="lenis.scrollTo('#about')"
-                    class="px-4 py-2 -mx-2 rounded text-neutral-50"
+                    class="px-4 py-2 -mx-2 rounded text-neutral-50 transition-all"
                 >
-                    About
+                    <span
+                        class="font-bold relative after:absolute after:rounded-sm after:left-0 after:-bottom-1 after:h-1 after:w-0 hover:after:w-full after:bg-green-500 after:transition-all after:duration-200"
+                    >
+                        About
+                    </span>
                 </div>
                 <div
                     onclick="lenis.scrollTo('#timeline')"
-                    class="px-4 py-2 -mx-2 rounded text-neutral-50"
+                    class="px-4 py-2 -mx-2 rounded text-neutral-50 transition-all"
                 >
-                    Timeline
+                    <span
+                        class="font-bold relative after:absolute after:rounded-sm after:left-0 after:-bottom-1 after:h-1 after:w-0 hover:after:w-full after:bg-green-500 after:transition-all after:duration-200"
+                    >
+                        Timeline
+                    </span>
                 </div>
                 <div
                     onclick="lenis.scrollTo('#about')"
-                    class="px-4 py-2 -mx-2 rounded text-neutral-50"
+                    class="px-4 py-2 -mx-2 rounded text-neutral-50 transition-all"
                 >
-                    Buidl Week
+                    <span
+                        class="font-bold relative after:absolute after:rounded-sm after:left-0 after:-bottom-1 after:h-1 after:w-0 hover:after:w-full after:bg-green-500 after:transition-all after:duration-200"
+                    >
+                        Buidl Week
+                    </span>
                 </div>
                 <div
                     onclick="lenis.scrollTo('#about')"
-                    class="px-4 py-2 -mx-2 rounded text-neutral-50"
+                    class="px-4 py-2 -mx-2 rounded text-neutral-50 transition-all"
                 >
-                    Hackathon
+                    <span
+                        class="font-bold relative after:absolute after:rounded-sm after:left-0 after:-bottom-1 after:h-1 after:w-0 hover:after:w-full after:bg-green-500 after:transition-all after:duration-200"
+                    >
+                        Hackathon
+                    </span>
                 </div>
             </div>
         </div>
