--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             class="h-1 top-0 sticky max-w-full z-30 bg-green-400"
         ></div>
         <div
+            id="squareone"
             class="h-16 w-16 absolute top-0 left-0 bg-green-500 -translate-x-1/2 -translate-y-1/2 rotate-45 z-30"
         ></div>
         <div
