--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
             <!-- Shadows -->
 
             <div
-                class="z-10 h-px w-px after:absolute after:h-72 blur-3xl after:w-72 after:-translate-x-1/2 after:-translate-y-1/2 after:bg-green-600 absolute shadow-right opacity-50"
+                class="z-10 after:z-10 h-px w-px after:absolute after:h-72 blur-3xl after:w-72 after:-translate-x-1/2 after:-translate-y-1/2 after:bg-green-600 absolute shadow-right opacity-50"
             ></div>
             <div
-                class="z-10 h-px w-px after:absolute after:h-72 blur-3xl after:w-72 after:-translate-x-1/2 after:-translate-y-1/2 after:bg-green-600 absolute shadow-left opacity-50"
+                class="z-10 after:z-10 h-px w-px after:absolute after:h-72 blur-3xl after:w-72 after:-translate-x-1/2 after:-translate-y-1/2 after:bg-green-600 absolute shadow-left opacity-50"
             ></div>
         </div>
         <!-- <script type="module" src="/main.js"></script> -->
