--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </span>
                 </div>
                 <div
-                    onclick="lenis.scrollTo('#about')"
+                    onclick="lenis.scrollTo('#modules')"
                     class="px-4 py-2 -mx-2 rounded text-neutral-50 transition-all"
                 >
                     <span
@@ -129,8 +129,12 @@
             id="timeline"
             class="h-screen w-screen bg-neutral-900 grid place-items-center max-w-5xl self-center"
         >
-            <h2 class="text-gray-100 font-extrabold text-4xl z-20 my-2">Timeline</h2>
-            <div class="flex flex-col lg:flex-row text-left justify-center mx-auto">
+            <h2 class="text-gray-100 font-extrabold text-4xl z-20 my-2">
+                Timeline
+            </h2>
+            <div
+                class="flex flex-col lg:flex-row text-left justify-center mx-auto"
+            >
                 <div
                     class="z-20 px-4 py-6 text-gray-400 w-80 lg:w-52 border-gray-500 border-l-2 border-t-0 lg:border-l-0 lg:border-t-2"
                 >
@@ -160,8 +164,7 @@
                         >7th April</span
                     >
                     <div class="h-2"></div>
-                    Build a live Bitcoin Tracker. Balaji, this one's for
-                    you:)
+                    Build a live Bitcoin Tracker. Balaji, this one's for you 🚀 
                 </div>
                 <div
                     class="px-4 py-6 text-gray-400 w-80 lg:w-52 border-gray-500 border-l-2 border-t-0 lg:border-l-0 lg:border-t-2"
@@ -184,9 +187,35 @@
                     <div class="h-2"></div>
                     Compete in a
                     <span class="font-bold">high stakes</span> 2-day online
-                    hackathon
+                    hackathon! 😋 
                 </div>
             </div>
+        </div>
+
+        <!-- modules -->
+        <div
+            id="modules"
+            class="h-screen w-full bg-neutral-900 grid place-items-center relative"
+        >
+            <div
+                class="flex flex-col gap-4 text-center z-20 items-center justify-center"
+            >
+                <h2 class="text-gray-100 font-extrabold text-4xl">Completed Modules</h2>
+                <a href="">
+                    <div
+                        class="p-4 text-white max-w-xs flex flex-col justify-center align-middle items-center rounded border-green-500 border-2"
+                    >
+                        <h3 class="text-xl font-bold">5th April</h3>
+                        <p class="text-xl">Router protocol</p>
+                    </div>
+                </a>
+            </div>
+            <div
+                class="w-2/3 h-1/2 rounded-t-full absolute z-10 bg-neutral-900 blur-3xl bottom-0"
+            ></div>
+            <div
+                class="w-2/3 h-2/3 rounded-t-full absolute bg-green-600 opacity-50 bottom-16 blur-3xl"
+            ></div>
         </div>
 
         <!-- Sponsors -->
