--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         ></div>
         <div class="h-max w-full absolute z-40 select-none top-0">
             <div
-                class="flex flex-row gap-2 md:gap-6 lg:gap-16 justify-center my-2"
+                class="flex flex-row gap-2 md:gap-6 lg:gap-16 justify-center my-2 static"
             >
                 <div
                     onclick="lenis.scrollTo('#about')"
@@ -164,7 +164,7 @@
                         >7th April</span
                     >
                     <div class="h-2"></div>
-                    Build a live Bitcoin Tracker. Balaji, this one's for you 🚀 
+                    Build a live Bitcoin Tracker. Balaji, this one's for you 🚀
                 </div>
                 <div
                     class="px-4 py-6 text-gray-400 w-80 lg:w-52 border-gray-500 border-l-2 border-t-0 lg:border-l-0 lg:border-t-2"
@@ -187,7 +187,7 @@
                     <div class="h-2"></div>
                     Compete in a
                     <span class="font-bold">high stakes</span> 2-day online
-                    hackathon! 😋 
+                    hackathon! 😋
                 </div>
             </div>
         </div>
@@ -200,8 +200,14 @@
             <div
                 class="flex flex-col gap-4 text-center z-20 items-center justify-center"
             >
-                <h2 class="text-gray-100 font-extrabold text-4xl">Completed Modules</h2>
-                <a href="">
+                <h2 class="text-gray-100 font-extrabold text-4xl">
+                    Completed Modules
+                </h2>
+                <a
+                    href="https://www.notion.so/Router-protocol-CrossChain-ERC-20-Step-by-Step-Guide-02b4ea9a68b548758ea90cd021779841"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                >
                     <div
                         class="p-4 text-white max-w-xs flex flex-col justify-center align-middle items-center rounded border-green-500 border-2"
                     >
