--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             id="cursor"
             class="z-20 h-2 w-2 rounded bg-green-500 -translate-x-1/2 -translate-y-1/2 sticky top-0"
         ></div>
-        <div class="h-max w-full absolute z-40 select-none top-0">
+        <div class="h-max w-full sticky z-40 select-none !top-0">
             <div
-                class="flex flex-row gap-2 md:gap-6 lg:gap-16 justify-center my-2 static"
+                class="flex flex-row gap-2 md:gap-6 lg:gap-16 justify-center my-2"
             >
                 <div
                     onclick="lenis.scrollTo('#about')"
@@ -58,7 +58,7 @@
                     <span
                         class="font-bold relative after:absolute after:rounded-sm after:left-0 after:-bottom-1 after:h-1 after:w-0 hover:after:w-full after:bg-green-500 after:transition-all after:duration-200"
                     >
-                        Buidl Week
+                        Build Week
                     </span>
                 </div>
                 <div
@@ -77,7 +77,7 @@
         <!-- Landing section -->
         <div
             id="app"
-            class="-top-12 h-screen w-full bg-neutral-900 grid place-items-center relative overflow-clip"
+            class="-top-24 h-screen w-full bg-neutral-900 grid place-items-center relative overflow-clip"
         >
             <div class="flex flex-col gap-8 text-center z-50">
                 <h1 class="text-gray-100 font-extrabold text-4xl text-blanka">
