--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h2
                     class="text-gray-100 font-[800] text-5xl text-manrope [font-style:normal] [letter-spacing:-2px]"
                 >
-                    buidl week
+                    build week
                 </h2>
                 <div class="bg-green-500 rounded p-4 uppercase">
                     Start buidling!
