--- a/index.html
+++ b/index.html
@@ -110,10 +110,12 @@
             <div class="flex flex-col gap-4 text-center z-20">
                 <h2 class="text-gray-100 font-extrabold text-4xl">About us</h2>
                 <div class="p-4 text-white max-w-md">
-                    We are a group of blockchain enthusiasts that have banded
-                    together to form a community of developers, innovators, and
-                    creators that strive to better themselves every day and have
-                    fun while building cool stuff :)
+                    We are a group of
+                    <span class="font-bold"> blockchain enthusiasts </span> that
+                    have banded together to form a community of developers,
+                    innovators, and creators that strive to better themselves
+                    every day and have fun while building
+                    <span class="font-bold"> cool stuff :) </span>
                 </div>
             </div>
             <div
