--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 >
                     build week
                 </h2>
-                <div class="bg-green-500 rounded p-4 uppercase font-bold">
+                <div onclick="lenis.scrollTo('#modules')" class="bg-green-500 rounded p-4 uppercase font-bold">
                     Start buidling!
                 </div>
             </div>
