--- a/index.html
+++ b/index.html
@@ -309,5 +309,6 @@
             ></div>
         </div>
         <script src="./main.js" type="module"></script>
+        <script defer src="/_vercel/insights/script.js"></script>
     </body>
 </html>
