--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <div class="h-2"></div>
                     Make your Web2 Project Web3 with Spheron
                 </div>
-                <div
+                <!-- <div
                     class="px-4 py-6 text-gray-400 w-80 lg:w-52 border-gray-500 border-l-2 border-t-0 lg:border-l-0 lg:border-t-2"
                 >
                     <span
@@ -167,13 +167,13 @@
                     >
                     <div class="h-2"></div>
                     Build a live Bitcoin Tracker. Balaji, this one's for you 🚀
-                </div>
+                </div> -->
                 <div
                     class="px-4 py-6 text-gray-400 w-80 lg:w-52 border-gray-500 border-l-2 border-t-0 lg:border-l-0 lg:border-t-2"
                 >
                     <span
                         class="bg-green-500 px-2 text-gray-50 py-1 rounded-t-xl rounded-r-xl font-bold text-xl relative after:absolute after:rounded-xl after:w-4 after:h-4 after:bg-white after:-left-[25px] after:top-[10px] md:after:left-0 md:after:-top-[29px]"
-                        >8th April</span
+                        >7th April</span
                     >
                     <div class="h-2"></div>
                     Attend a panel discussion on the importance of Venture
