--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </h2>
                 <div 
                     class="apply-button" 
-                    data-hackathon-slug="YOUR-HACKATHON-SLUG" 
+                    data-hackathon-slug="https://buildweek.devfolio.co/" 
                     data-button-theme="dark-inverted"
                     style="height: 44px; width: 312px"
                 ></div>
